src/Team/Viewer/TeamViewer.module.css
.sectionheader {
  composes: animBoxBackground from global;
  color: black;
  width: 100%;
  text-align: center;
  margin: 6px auto;
  padding: 4px 8px;
  width: fit-content;
  clip-path: polygon(0 0, calc(100% - 4px) 0, 100% 100%, 4px 100%);
}

.team {
  display: flex;
  gap: 4px;
  flex-wrap: wrap;
  justify-content: center;
}

.featuredList {
  display: flex;
  justify-content: center;
  gap: 4px;
  flex-wrap: wrap;
  width: 100%;
}

.mobileFeatured {
  top: 0;
  left: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  padding-top: calc(var(--header-height) + 14px);
  box-sizing: border-box;
  overflow-y: auto;
  z-index: 1;
}

.mobileFeaturedHidden {
  display: none;
}

.pageHidden {
  display: none;
}

@media all and (max-aspect-ratio: 1/1) and (max-width: 800px) {
  .featuredTeam {
    font-size: 0.8em;
  }
}

.featuredTeam {
  composes: animSelectableBackground from global;
  display: flex;
  flex-direction: column;
  gap: 4px;
  width: 240px;
  max-width: calc(50% - 8px);
  box-sizing: border-box;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 8px;
  text-decoration: none;
  color: black !important;
}

.featuredTeamSelected {
  composes: featuredTeam;
  composes: animSelectedBackground from global;
}

.featuredDesc {
  font-size: 0.9em;
  color: rgb(25, 25, 25);
  position: relative;
  align-self: stretch;
}

.featuredHoverCollapsed {
  display: block;
  padding: 2px 0;
  background-color: rgba(0, 0, 0, 0.3);
  color: lightgray;
  font-size: 0.9em;
}

.featuredHoverDesc {
  composes: animBoxBackground from global;
  position: absolute;
  box-shadow: 0 0 5px black;
  display: none;
  top: -2px;
  left: -2px;
  padding: 2px;
  width: 100%;
  z-index: 1;
}

.featuredHover:hover .featuredHoverDesc {
  display: block;
  cursor: default;
}

.featuredIcons {
  display: flex;
  justify-content: space-evenly;
  width: 100%;
}

.featuredIcon {
  flex: 1 1 10px;
  max-width: 40px;
  min-width: 1px;
  aspect-ratio: 1;
}

.addTeamText {
  font-size: 0.9em;
  text-align: center;
}

.categorybg {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 100%;
  margin: auto;
  font-size: 1.1em;
}

.categorybg > button {
  padding: 4px 8px 5px;
}

